refactor: remove unused imports and methods from location and repository classes